--- a/html/login.html
+++ b/html/login.html
@@ -75,7 +75,7 @@
                             <div class="user-box">
                                 <input required="" name="" type="password">
                                 <label>Contraseña</label>
-                                <a href="" class="b2">Olvidaste tu contraseña?</a>
+                                <a onclick="cargarOlvidocontra()"; class="b2">Olvidaste tu contraseña?</a>
                             </div>
                             <a href="#">
                                 <span></span>
@@ -85,7 +85,7 @@
                                 Enviar
                             </a>
                         </form>
-                        <p>No Tienes una Cuenta? <a onclick="cargarNuevaPagina();" class="a2">Registrate!</a></p>
+                        <p>No Tienes una Cuenta?. <a onclick="cargarRegister();" class="a2">Registrate!</a></p>
                     </div>
                 </div>
             </div>  
@@ -117,9 +117,6 @@
     </div>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <a href="https://api.whatsapp.com/send?phone=+56961342677&text=Hola!!%20Te%20estamos%20buscando%20para%20trabajar%20de%20programador"
-        class="float" target="_blank">
-        <i class="fa fa-whatsapp my-float"></i>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
