--- a/html/resta_contra.html
+++ b/html/resta_contra.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Portafolio/css/registro.css">
+    <link rel="stylesheet" href="/Portafolio/css/Recup_contra.css">
     <link rel="stylesheet" href="/Portafolio/css/loader.css">
     <link rel="stylesheet" href="/Portafolio/css/whatsapp.css">
     <script src="/Portafolio/js/nightmodep.js"></script>
@@ -24,20 +24,19 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-md-10 col-sm-10 text-center">
                     <div class="login-box" data-bs-theme="light">
-                        <p>Registro</p>
+                        <p>Olvidaste tu contraseña? <p class="txt-box">Por favor ingresar el email asociado a tu cuenta y te enviaremos un link para restablecer tu contraseña.</p></p>
                         <form>
                             <div class="user-box">
                                 <input required="" name="" type="text">
-                                <label>Email</label>
+                                <label>Ingrese su Email</label>
                             </div>
-                            <div class="user-box">
-                                <input required="" name="" type="password">
-                                <label>Contraseña</label>
-                            </div>
-                            <div class="user-box">
-                                <input required="" name="" type="password">
-                                <label>repetir Contraseña</label>
-                            </div>
+                            <a href="/Portafolio/html/login.html" style="user-select: none;">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                Volver
+                            </a>
                             <a style="user-select: none;">
                                 <span></span>
                                 <span></span>
@@ -46,7 +45,7 @@
                                 Confirmar
                             </a>
                         </form>
-                        <p>Tienes una cuenta? <a href="/Portafolio/html/login.html" class="a2">Ingresa!</a></p>
+                        
                     </div>
                 </div>
             </div>  
