--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                             </div>
                             <div class="mb-1">
                                 <label for="" class="form-label"></label>
-                                <input type="text" class="form-control" id="" placeholder="Compañia">
+                                <input type="text" class="form-control" id="" placeholder="Numero">
                             </div>
                             <div class="mb-1">
                                 <label for="" class="form-label"></label>
