--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -44,7 +44,7 @@
                     </a>
                 </div>
                 <div class="inicio_sesion desktop">
-                    <a href="" class="ini_sesion">
+                    <a href="/Portafolio/html/login.html" class="ini_sesion">
                         Inicio de sesion
                     </a>
                     <button onclick="CambiarTema()" class="btn rounded-fill"><i id="dl-icon"
